--- a/index.html
+++ b/index.html
@@ -12,3 +12,4 @@
 <input type="hidden" name="MERCHANT_RESPONSE_URL" value="tpv-mailer.php">
 <input type="Submit" value="Pay by credit card on a Secure Website">
 </form>
+<body>zzz</body>
