--- a/index.html
+++ b/index.html
@@ -13,4 +13,7 @@
 <input type="Submit" value="Pay by credit card on a Secure Website">
   <a>AEVO</a>
 </form>
-<body>zzz</body>
+<body>
+  <div>AEVO</div>
+</body>
+<footer></footer>
