--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <input type="Submit" value="Pay by credit card on a Secure Website">
   <a href="https://www.google.com">AEVO2222</a>
 </form>
+<head>
+  <script>validator.js</script>
+</head>
 <body>
   <div>AEVO2</div>
 </body>
