--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 <body>
   <div>AEVO2</div>
   <h1>AEVOOOO</h1>
-  <a>A++</a>
+  <a href="https://www.google.com">A++</a>
 </body>
 <footer></footer>
